Set overflow-y scroll to prevent a shocking window

--- a/app/client/stylesheets/defaults/body.sass
+++ b/app/client/stylesheets/defaults/body.sass
@@ -1,5 +1,6 @@
 body
     background-color: $color-background
+    overflow-y: scroll
 
     &.pu-state-currentlayout-app
         background-color: $color-background-footer
